--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
     "com.unity.ai.navigation": "1.1.7",
-    "com.unity.cinemachine": "2.10.5",
+    "com.unity.cinemachine": "3.1.5",
     "com.unity.collab-proxy": "2.11.3",
     "com.unity.ide.rider": "3.0.36",
     "com.unity.ide.visualstudio": "2.0.22",
@@ -9,6 +9,7 @@
     "com.unity.inputsystem": "1.14.2",
     "com.unity.probuilder": "5.2.4",
     "com.unity.render-pipelines.universal": "14.0.12",
+    "com.unity.splines": "2.8.2",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.9",
     "com.unity.timeline": "1.7.7",
