--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -8,6 +8,7 @@
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.14.2",
+    "com.unity.polybrush": "1.2.1",
     "com.unity.probuilder": "5.2.4",
     "com.unity.render-pipelines.universal": "14.0.12",
     "com.unity.splines": "2.8.2",
